# trinity

./: .cspell.json  .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_README.md  DOCS_CONSOLIDATION_PLAN.md  Dockerfile.dev  HYGIENE_FIXES_SUMMARY.md  INTEGRATION_COMPLETE_v0.5.0.md  LICENSE  MULTICLASS_IMPLEMENTATION_SUMMARY.md  MULTICLASS_TRAINER_PLAN.md  Makefile  PRODUCTION_TRAINING_REPORT.md  QUICK_REFERENCE.md  README.md  README_OLD.md  REFACTORING_ANNOUNCEMENT.md  REFACTORING_GOD_OBJECTS.md  REFACTORING_INDEX.md  REFACTORING_SUMMARY.md  SECURITY.md  TEST_REPORT_v0.5.0.md  TRAINING_REPORT_v0.5.0.md  V0.8.0_DEPLOYMENT_STATUS.md  benchmark_report.json  commits.txt  demo_self_healing.sh  dev.bat  dev.sh  docker-compose.yml  main.py  main_legacy.py  package-lock.json  package.json  pyproject.toml  requirements.txt  (+8 more)
.github/workflows/: ci.yml  docs-quality.yml  docs.yml  markdown-link-check-config.json
config/: content_rules.json  logging.yaml  prompts.yaml  settings.py  settings.yaml  themes.json  themes.yaml
data/: chaos_content.json  input_content.json  raw_portfolio.txt  realistic_overflow.json  training_dataset.csv  training_dataset_old_20251126_164201.csv
docs/: ARCHITECTURE.md  ASYNC_GUIDE.md  CENTURIA_FACTORY_SUMMARY.md  DOCKER.md  GIT_HISTORY_CLEANUP.md  GUARDIAN_CODE_REVIEW_FIXES.md  LOGGING_GUIDE.md  MIGRATION_GUIDE.md  MLOPS_SETUP.md  NEURAL_HEALER_INTEGRATION.md  NEURAL_SYMBOLIC_ARCHITECTURE.md  PHASE1_REFACTORING.md  PHASE6_ROADMAP.md  RECORDING_GUIDE.md  REFACTORING_GUIDE.md  RELEASE_v0.2.0.md  SECRETS_MANAGEMENT.md  index.md
docs/.vitepress/: config.mjs
docs/1_Architecture/: 1.0_Neural_Symbolic.md  1.0_Retry_Logic_Heuristics.md  1.1_Async_MLOps.md
docs/2_Development/: 2.0_Setup.md  2.1_Code_Quality.md
docs/3_Features/: 3.0_Self_Healing.md  3.1_Centuria_Factory.md
docs/4_LLM_Agents/: 4.0_LLM_Caching.md
docs_legacy/: DOCKER.md  LOGGING_GUIDE.md  MAKEFILE_GUIDE.md  PHASE1_REFACTORING.md  README.md  REFACTORING_GUIDE.md
docs_v2/: index.md
docs_v2/.vitepress/: config.mjs
docs_v2/1_Architecture/: 1.0_Neural_Symbolic.md  1.1_Async_MLOps.md
docs_v2/2_Development/: 2.0_Setup.md
examples/: refactored_usage.py
models/: layout_risk_predictor_20251126_132320_metadata.json  layout_risk_predictor_20251126_132419.pkl  layout_risk_predictor_20251126_132419_metadata.json  layout_risk_predictor_20251126_140513.pkl  layout_risk_predictor_20251126_140513_metadata.json  layout_risk_predictor_20251126_142539.pkl  layout_risk_predictor_20251126_142539_metadata.json  layout_risk_predictor_20251126_163837.pkl  layout_risk_predictor_20251126_163837_metadata.json  layout_risk_predictor_20251126_165957.pkl  layout_risk_predictor_20251126_165957_metadata.json  layout_risk_predictor_20251126_171625.pkl  layout_risk_predictor_20251126_171625_metadata.json  layout_risk_predictor_20251127_094016_metadata.json
models/generative/: style_generator_best.pth  tailwind_vocab.json
scripts/: README.md  activate_neural_healer.sh  benchmark_multiclass.py  cleanup-git-history.sh  demo.sh  fast_training.sh  mass_theme_generator.py  migrate_themes_to_yaml.py  nightly_training.sh  production_training.sh  test_docker_e2e.sh  train_predictor.py  validate_doc_snippets.py
src/: __init__.py  builder.py  content_engine.py  guardian.py  llm_client.py  text_processor.py  validator.py
src/trinity/: __init__.py  cli.py  config.py  config_v2.py  engine.py  exceptions.py
src/trinity/components/: __init__.py  async_brain.py  brain.py  builder.py  dataminer.py  generative_trainer.py  guardian.py  healer.py  llm_client.py  neural_healer.py  predictor.py  trainer.py
src/trinity/ml/: __init__.py  models.py  tokenizer.py
src/trinity/utils/: __init__.py  cache_manager.py  circuit_breaker.py  idempotency.py  logger.py  secrets.py  structured_logger.py  text_processor.py  validators.py
tests/: __init__.py  conftest.py  test_async_llm_client.py  test_async_performance.py  test_builder.py  test_circuit_breaker.py  test_config.py  test_e2e_complete.py  test_engine.py  test_healer.py  test_healer_logic.py  test_llm_caching.py  test_multiclass_pipeline.py  test_properties.py
